Wed May 02 04:17:28 BST 2007  Olly Betts <olly@survex.com>

	* Makefile.am,api/,backends/alltermslist.cc,backends/flint/,
	  backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,
	  backends/multi/multi_termlist.cc,backends/multi/multi_termlist.h,
	  backends/quartz/,backends/remote/net_termlist.cc,
	  backends/remote/net_termlist.h,backends/remote/remote-database.cc,
	  common/,expand/,matcher/: Split expand functionality out of
	  "matcher" subdirectory into new "expand" subdirectory since it's
	  not really connected to query matching and the matcher subdirectory
	  is one of the largest.  Rewrite OrTermList, eliminating
	  BranchTermList entirely.  Alter expand to pass in an object (of
	  class Xapian::Internal::ExpandWeight) which accumulates statistics
	  instead of returning OmExpandBits objects which we then have to
	  merge (and eliminating the need for LeafTermList entirely).  Query
	  expansion for multiple databases should now give results more like
	  that for a single database with the same documents (if
	  USE_EXACT_TERMFREQ is used, the results should be the same).  Debug
	  logging from expand is now all of type EXPAND (some was of types
	  MATCHER and WTCALC before).

Wed May 02 03:35:17 BST 2007  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Add deprecation info for Omega too.

Wed May 02 00:24:13 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: Add test expandweights1 as a regression test for
	  the previous commit.
	* tests/harness/testsuite.h: Set the precision for TEST_EQUAL_DOUBLE
	  so we don't claim two numbers to be different yet display them the
	  same!

Tue May 01 23:27:10 BST 2007  Olly Betts <olly@survex.com>

	* backends/remote/net_termlist.cc,backends/remote/remote-database.cc,
	  common/remoteprotocol.h,docs/remote_protocol.html,
	  net/remoteserver.cc: Fix handling of the document length in the
	  termlist for the remote backend.
