@@ -1,3 +1,9 @@
+Wed May 02 14:21:40 BST 2007  Olly Betts <olly@survex.com>
+
+	* common/remoteconnection.h,include/xapian/dbfactory.h,
+	  net/remoteserver.cc: A timeout of `0' in the remote backend now
+	  means "no timeout" (code patch from Mark Hammond).
+
 Wed May 02 04:17:28 BST 2007  Olly Betts <olly@survex.com>
 
 	* Makefile.am,api/,backends/alltermslist.cc,backends/flint/,
